# mctpwplus

./: 0001-Firmware-update-working.patch  CMakeLists.txt  Dockerfile  README.md  config.h  dbus_cb.cpp  docker_run.sh  mctp_impl.cpp  mctp_impl.hpp  mctp_kernel_binding.cpp  mctp_kernel_binding.h  mctp_kernel_binding.hpp  mctp_kernel_utils.cpp  mctp_kernel_utils.hpp  mctp_wrapper.cpp  mctp_wrapper.hpp  mctpw_patch.diff  meson.build  service_monitor.cpp  service_monitor.hpp  test_mctp_m2.cpp  unit_test.sh
examples/: device_manager.cpp  meson.build  own_eid_change.cpp  probe_device.cpp  receive_callback.cpp  register_responder.cpp  send_receive.cpp  send_receive_blocked.cpp
subprojects/: nlohmann.wrap
